# wcs_gateway_module

./: ChangeLog  INSTALL  Makefile.am  NEWS  README  WCSCache.cc  WCSCache.h  WCSContainer.cc  WCSContainer.h  WCSContainerStorage.cc  WCSContainerStorage.h  WCSError.cc  WCSError.h  WCSException.cc  WCSException.h  WCSFile.cc  WCSFile.h  WCSGatewayError.cc  WCSGatewayError.h  WCSGatewayModule.cc  WCSGatewayModule.h  WCSGatewayRequest.cc  WCSGatewayRequest.h  WCSGatewayRequestHandler.cc  WCSGatewayRequestHandler.h  WCSGatewayUtils.cc  WCSGatewayUtils.h  WCSModule.cc  WCSModule.h  WCSParams.cc  WCSParams.h  WCSRequest.cc  WCSRequest.h  WCSRequestHandler.cc  WCSRequestHandler.h  WCSResponseNames.h  WCSUtils.cc  WCSUtils.h  bes-wcs-data.sh.in  bes-wcsg-data.sh.in  (+7 more)
OSX_Resources/: Description.plist  Info.plist  InstallationCheck.strings  ReadMe.txt  Welcome.html  update_mac_package_contents.pl
conf/: bes.m4
data/: example1.wcs  example2.wcs
testsuite/: Makefile.am  WCSTestModule.cc  WCSTestModule.h  WCSTestTransmitter.cc  WCSTestTransmitter.h  bes.conf  bes.conf.in  common_tests.exp
testsuite/besstandalone.wcs/: accesserror.exp  accesserror2.exp  infile1.ascii.exp  infile1.das.exp  infile1.dds.exp  infile1.ddx.exp  infile2.ascii.exp  infile2.das.exp  infile2.dds.exp  infile2.ddx.exp  infile3.ascii.exp  infile3.das.exp  infile3.dds.exp  infile3.ddx.exp  infile4.ascii.exp  infile4.das.exp  infile4.dds.exp  infile4.ddx.exp
testsuite/config/: unix.exp
testsuite/wcs/: accesserror.bescmd  accesserror.bescmd.baseline  accesserror2.bescmd  accesserror2.bescmd.baseline  infile1.ascii.bescmd  infile1.das.bescmd  infile1.dds.bescmd  infile1.ddx.bescmd  infile2.ascii.bescmd  infile2.das.bescmd  infile2.dds.bescmd  infile2.ddx.bescmd  infile3.ascii.bescmd  infile3.das.bescmd  infile3.dds.bescmd  infile3.ddx.bescmd  infile4.ascii.bescmd  infile4.das.bescmd  infile4.dds.bescmd  infile4.ddx.bescmd  outfile1.ascii.bescmd.baseline  outfile1.das.bescmd.baseline  outfile1.dds.bescmd.baseline  outfile1.ddx.bescmd.baseline  outfile2.ascii.bescmd.baseline  outfile2.das.bescmd.baseline  outfile2.dds.bescmd.baseline  outfile2.ddx.bescmd.baseline  outfile3.ascii.bescmd.baseline  outfile3.das.bescmd.baseline  outfile3.dds.bescmd.baseline  outfile3.ddx.bescmd.baseline  outfile4.ascii.bescmd.baseline  outfile4.das.bescmd.baseline  outfile4.dds.bescmd.baseline  outfile4.ddx.bescmd.baseline
unit-tests/: Makefile.am  bes.conf  convertTypeT.cc  err.xml  requestT.cc  validateUrlT.cc  validateUrlT.dbg  xmlErrT.cc
